Initial commit for recommended characters

--- a/index.html
+++ b/index.html
@@ -563,6 +563,12 @@
                     </div>
                 </div>
 
+                <div class="row">
+                    <div class="col col-12">
+                        <button type="button" id="rec-button-1" class="btn btn-dark btn-sm rec-button" onclick="recChar(this)">Suggest Characters</button>
+                    </div>
+                </div>
+
                 <br/>
 
                 <div class="row">
@@ -624,6 +630,12 @@
                 <div class="row">
                     <div class="col col-12">
                         <button type="button" class="btn btn-dark btn-sm cal-button">Export to Calculator</button>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col col-12">
+                        <button type="button" id="rec-button-2" class="btn btn-dark btn-sm rec-button" onclick="recChar(this)">Suggest Characters</button>
                     </div>
                 </div>
 
@@ -691,6 +703,12 @@
                     </div>
                 </div>
 
+                <div class="row">
+                    <div class="col col-12">
+                        <button type="button" id="rec-button-3" class="btn btn-dark btn-sm rec-button" onclick="recChar(this)">Suggest Characters</button>
+                    </div>
+                </div>
+
                 <br/>
 
                 <div class="row">
@@ -755,6 +773,12 @@
                     </div>
                 </div>
 
+                <div class="row">
+                    <div class="col col-12">
+                        <button type="button" id="rec-button-4" class="btn btn-dark btn-sm rec-button" onclick="recChar(this)">Suggest Characters</button>
+                    </div>
+                </div>
+
                 <br/>
 
                 <div class="row">
@@ -816,6 +840,12 @@
                 <div class="row">
                     <div class="col col-12">
                         <button type="button" class="btn btn-dark btn-sm cal-button">Export to Calculator</button>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col col-12">
+                        <button type="button" id="rec-button-5" class="btn btn-dark btn-sm rec-button" onclick="recChar(this)">Suggest Characters</button>
                     </div>
                 </div>
 
@@ -968,6 +998,8 @@
             </div>
         </div>
     </div>
+
+    <div id="snackbar">Recommended Characters for this Boss are now highlighted!</div>
 
     <div id="footer"></div>
 </body>
