More additions to recommended character list (TM Doffy only)

--- a/index.html
+++ b/index.html
@@ -999,7 +999,11 @@
         </div>
     </div>
 
-    <div id="snackbar">Recommended Characters for this Boss are now highlighted!</div>
+    <div id="snackbar">
+        Recommended Characters for this Boss are now highlighted! <br/>
+        Best characters are highlighted in <span style="color:#8c6cff">Purple</span><br/>
+        Good Alternative characters are highlighted in <span style="color:#FFFF66">Yellow</span>
+    </div>
 
     <div id="footer"></div>
 </body>
