--- a/index.html
+++ b/index.html
@@ -1000,8 +1000,8 @@
     </div>
 
     <div id="snackbar">
-        Recommended Characters for this Boss are now highlighted! <br/>
-        Best characters are highlighted in <span style="color:#8c6cff">Purple</span><br/>
+        Characters suggested for this Boss are now highlighted! <br/>
+        Recommended characters are highlighted in <span style="color:#8c6cff">Purple</span><br/>
         Good Alternative characters are highlighted in <span style="color:#FFFF66">Yellow</span>
     </div>
 
