--- a/index.html
+++ b/index.html
@@ -986,6 +986,12 @@
         </div>
 
         <div class="row">
+                <div class="col offset-md-9 col-md-3 col-12">
+                    Your TM Points From This Level: <label class="confirm-save" id="tm-point-total-curr-label"></label>
+                </div>
+            </div>
+
+        <div class="row">
             <div class="col offset-md-9 col-md-3 col-12">
                 Your Total TM Points: <label class="confirm-save" id="tm-point-total-label"></label>
             </div>
