--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    
 
     <script src="common/assets/js/main.js"></script>
+    <script src="common/assets/js/jquery.ui.touch-punch.min.js"></script>
     <script src="tm-planner/assets/js/tm-planner.js"></script>
 
     <script src="tm-planner/data/tm_boosters.js"></script>
