--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     
     <script src="common/assets/js/main.js"></script>
-    <script src="common/assets/js/jquery.ui.touch-punch.min.js"></script>
+    <script src="common/assets/js/jquery.ui.touch-punch.js"></script>
     <script src="tm-planner/assets/js/tm-planner.js"></script>
 
     <script src="tm-planner/data/tm_boosters.js"></script>
