--- a/index.html
+++ b/index.html
@@ -917,6 +917,14 @@
 
                 <div class="row">
                     <div class="col col-12">
+                        <button type="button" id="rec-button-6" class="btn btn-dark btn-sm rec-button" onclick="recChar(this)">Suggest Characters</button>
+                    </div>
+                </div>
+
+                <br/>
+
+                <div class="row">
+                    <div class="col col-12">
                         HP: <span id="boss-hp-6"></span>
                     </div>
                 </div>
