Modal to filter other specials from DB

--- a/index.html
+++ b/index.html
@@ -205,6 +205,33 @@
         </div>
     </div>
 
+    <div id="more-specials-filter-modal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">
+                        &nbsp;Additional Specials Filtering
+                    </h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body" id="help-info">
+                    <div class="list-group">
+                        
+                      </div>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-sm btn-seconday" data-dismiss="modal">
+                        <i class="fas fa-times"></i>&nbsp;Close
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div id="container">
         <div class="row">
             <div class="col offset-lg-4 col-lg-3 offset-md-3 col-md-5 offset-sm-2 col-sm-6 col-10">
@@ -320,6 +347,14 @@
                         <div class="filter spec-filter chain-lock-rm-div" data-filter="Chain Multiplier Limit and Chain Lock reducer"></div>
                         <div class="filter spec-filter threshold-rm-div" data-filter="Enemy Threshold Damage Reduction reducer"></div>
                         <div class="filter spec-filter cd-silence-rm-div" data-filter="Silence reducers"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col col-12">
+                        <button type="button" class="btn btn-sm btn-info" id="specials-button">
+                            More Specials
+                        </button>
                     </div>
                 </div>
 
