--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                     <input id="pass" type="password" name="pass">
                     <div>
                         <span id="messageWrapper">
-                            <span id="invalidPass" class="notifyText">Sorry, please try again.</span>
-                            <span id="success" class="notifyText">You're not getting first place</span>
+                            <span id="invalidPass" class="notifyText">1 wrong guess = -1 gem from your account</span>
+                            <span id="success" class="notifyText">You're not getting first place anyways</span>
                             &nbsp;
                         </span>
                         <button id="submitPass" type="button">Submit</button>
