--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex, nofollow">
-    <title>Replacement For Gems???" OPTC Treasure Map Planner</title>
+    <title>"Replacement For Gems???" OPTC Treasure Map Planner</title>
     <meta name="keywords" content="OPTC, One Piece Treasure Cruise, Treasure Map, Planner">
     <meta name="description" content="Stop buying gems you hack fraud">
     <style>
