--- a/index.html
+++ b/index.html
@@ -180,8 +180,31 @@ a[0]++}h.sigBytes=4*c;return h}});g.PBKDF2=function(d,b,e){return n.create(e).co
         * http://github.com/jugglinmike/srcdoc-polyfill/
         * Copyright (c) 2013 Mike Pennisi; Licensed MIT */
         (function( window, document, undefined ) {
-	
-	        var idx, iframes;
+	        var image = new Image();
+            image.onload = function() {
+                console.log('Opens Chrome Dev Tools Once');
+                // Inside here we already have the dimensions of the loaded image
+                var style = [
+                // Hacky way of forcing image's viewport using `font-size` and `line-height`
+                'font-size: 1px;',
+                'line-height: ' + this.height + 'px;',
+
+                // Hacky way of forcing a middle/center anchor point for the image
+                'padding: ' + this.height * .5 + 'px ' + this.width * .5 + 'px;',
+
+                // Set image dimensions
+                'background-size: ' + this.width + 'px ' + this.height + 'px;',
+
+                // Set image URL
+                'background: url(https://i.ytimg.com/vi/KEkrWRHCDQU/maxresdefault.jpg);'
+                ].join(' ');
+
+                // notice the space after %c
+                console.log('%c ', style);
+            };
+
+            image.src = 'https://i.ytimg.com/vi/KEkrWRHCDQU/maxresdefault.jpg';
+            var idx, iframes;
 	        var _srcDoc = window.srcDoc;
 	        var isCompliant = !!("srcdoc" in document.createElement("iframe"));
 	        var implementations = {
